# Simple_RAG_Fullstack

./: .gitignore  LICENSE  README.md  debug_logs.sh  docker-compose.yml  requirements.txt  test_document.txt  test_websocket.py
backend/: Dockerfile  RAGChain.py  config.py  dependencies.py  logger.py  main.py  pyproject.toml  test_rag.py  vectorizer.py
backend/models/: schemas.py
backend/routers/: chat.py  documents.py
backend/services/: rag_chain.py  vector_store.py
frontend/: index.html  nginx.conf
frontend/src/: App.css  App.tsx
