[project]
name = "simple-rag-fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "flashrank>=0.2.10",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "pypdf>=5.1.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
